# polyzymd

./: .gitignore  .readthedocs.yaml  AGENTS.md  BUILD_PIPELINE_OPTIMIZATION_SUMMARY.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  full-test.yml  release.yml
analysis/RMSF/: RMSF_analysis.py  RMSF_plotting.py
devtools/conda-envs/: polyzymd-env.yml  test-env.yml
docs/: Makefile  requirements.txt
docs/source/: conf.py  index.rst
docs/source/_static/: custom.css
docs/source/api/: builders.md  compare.md  config.md  core.md  overview.rst  simulation.md  workflow.md
docs/source/tutorials/: analysis_binding_free_energy.md  analysis_binding_preference.md  analysis_compare_conditions.md  analysis_complete_workflow.md  analysis_contacts_cookbook.md  analysis_contacts_quickstart.md  analysis_distances_quickstart.md  analysis_exposure_dynamics.md  analysis_polymer_affinity.md  analysis_reference_selection.md  analysis_rmsf_best_practices.md  analysis_rmsf_quickstart.md  analysis_rmsf_verification.md  analysis_statistics_best_practices.md  analysis_triad_best_practices.md  analysis_triad_quickstart.md  architecture.md  benchmarks.md  broken_molecules_debugging.md  cli_reference.md  configuration.md  contributing.md  dynamic_polymers.md  equilibration.md  extending_comparators.md  extending_plotters.md  gromacs_export.md  hpc_slurm.md  installation.md  packaging.md  polymers.md  quickstart.md  residue_assignment.md  restraints.md  troubleshooting.md
legacy_analysis/catalysis/: LipA_active_site.py
simulation_scripts/bash_scripts/: send_10A_RESTRAINT_LipA_0%_10-mers_293K_3reps.sh  send_10A_RESTRAINT_LipA_0%_10-mers_323K_3reps.sh  send_10A_RESTRAINT_LipA_0%_10-mers_363K_3reps.sh  send_10A_RESTRAINT_LipA_0%_313K_5reps.sh  send_10A_RESTRAINT_LipA_1%_10-mers_293K_3reps.sh  send_10A_RESTRAINT_LipA_1%_10-mers_323K_3reps.sh  send_10A_RESTRAINT_LipA_1%_10-mers_363K_3reps.sh  send_10A_RESTRAINT_LipA_1%_313K_5reps.sh  send_10A_RESTRAINT_LipA_10%_10-mers_293K_3reps.sh  send_10A_RESTRAINT_LipA_10%_10-mers_323K_3reps.sh  send_10A_RESTRAINT_LipA_10%_10-mers_363K_3reps.sh  send_10A_RESTRAINT_LipA_10%_313K_5reps.sh  send_10A_RESTRAINT_LipA_2%_10-mers_293K_3reps.sh  send_10A_RESTRAINT_LipA_2%_10-mers_323K_3reps.sh  send_10A_RESTRAINT_LipA_2%_10-mers_363K_3reps.sh  send_10A_RESTRAINT_LipA_2%_313K_5reps.sh  send_10A_RESTRAINT_LipA_5%_10-mers_293K_3reps.sh  send_10A_RESTRAINT_LipA_5%_10-mers_323K_3reps.sh  send_10A_RESTRAINT_LipA_5%_10-mers_363K_3reps.sh  send_10A_RESTRAINT_LipA_5%_313K_5reps.sh  send_3,3A_RESTRAINT_LipA_0%_293K_3reps.sh  send_3,3A_RESTRAINT_LipA_0%_323K_3reps.sh  send_3,3A_RESTRAINT_LipA_0%_363K_3reps.sh  send_3,3A_RESTRAINT_LipA_10%_293K_3reps.sh  send_3,3A_RESTRAINT_LipA_10%_323K_3reps.sh  send_3,3A_RESTRAINT_LipA_10%_363K_3reps.sh  send_3,3A_RESTRAINT_LipA_5%_293K_3reps.sh  send_3,3A_RESTRAINT_LipA_5%_323K_3reps.sh  send_3,3A_RESTRAINT_LipA_5%_363K_3reps.sh  send_3,3A_RESTRAINT_LipA_noPoly_293K_3reps.sh  send_3,3A_RESTRAINT_LipA_noPoly_323K_3reps.sh  send_3,3A_RESTRAINT_LipA_noPoly_363K_3reps.sh  slurm_parser.sh
simulation_scripts/python_scripts/: daisy_chain_submission.py  daisy_chain_submission_NOPOLY.py  new_continue_simulation.py  new_continue_simulation_polymerist1.py  new_continue_simulation_polymerist2.py  sim_enz_co-poly_DOCKED_RESTRAINT.py  sim_enz_only_DOCKED_RESTRAINT.py
src/: actions_sum_squares.py  init.py  init_CoPolymers.py  init_sum_squares_workspace.py  migrate_signac.py  tmp_CoPoly_workflow.toml
src/polyzymd/: __init__.py
src/polyzymd/analysis/: __init__.py  cli.py  config.py  make_whole.py  unwrap.py
src/polyzymd/analysis/common/: __init__.py  aa_classification.py
src/polyzymd/analysis/contacts/: __init__.py  _utils.py  aggregator.py  binding_preference.py  calculator.py  calculator_parallel.py  results.py  surface_exposure.py
src/polyzymd/analysis/core/: __init__.py  aggregation.py  alignment.py  autocorrelation.py  centroid.py  config_hash.py  constants.py  diagnostics.py  loader.py  logging_utils.py  metric_type.py  pbc.py  registry.py  selections.py  statistics.py
src/polyzymd/analysis/distances/: __init__.py  calculator.py  plotting.py
src/polyzymd/analysis/exposure/: __init__.py  chaperone.py  classification.py  config.py  dynamics.py  enrichment.py
src/polyzymd/analysis/results/: __init__.py  base.py  distances.py  rmsf.py  triad.py
src/polyzymd/analysis/rmsf/: __init__.py  calculator.py  plotting.py
src/polyzymd/analysis/sasa/: __init__.py  config.py  trajectory.py
src/polyzymd/analysis/triad/: __init__.py  analyzer.py  plotting.py
src/polyzymd/builders/: __init__.py  _packmol_patch.py  enzyme.py  fragment_generator.py  polymer.py  polymer_generator.py  solvent.py  substrate.py  system_builder.py
src/polyzymd/cli/: __init__.py  main.py
src/polyzymd/compare/: __init__.py  binding_free_energy_formatters.py  cli.py  cli_utils.py  comparator.py  config.py  contacts_comparator.py  contacts_formatters.py  contacts_results.py  distances_formatters.py  exposure_formatters.py  formatters.py  plotter.py  plotting.py  polymer_affinity_formatters.py  results.py  settings.py  statistics.py  triad_comparator.py  triad_formatters.py  triad_results.py
src/polyzymd/compare/comparators/: __init__.py  _binding_preference_helpers.py  (+8 more)
src/polyzymd/config/: __init__.py  loader.py  schema.py
src/polyzymd/core/: __init__.py  atom_groups.py  parameters.py  position_restraints.py  restraints.py
src/polyzymd/data/: __init__.py  cosolvent_library.py  solvent_molecules.py
src/polyzymd/exporters/: __init__.py  gmx_visualization_post_processing_commands.txt  gromacs.py
src/polyzymd/simulation/: __init__.py  continuation.py  runner.py
src/polyzymd/utils/: __init__.py  boxvectors.py  charging.py  forcegroups.py  openmm_patches.py  packmol.py  topology.py  units.py
src/polyzymd/workflow/: __init__.py  daisy_chain.py  slurm.py
tests/: __init__.py  test_binding_free_energy.py  test_enrichment.py  test_imports.py  test_packmol.py  test_polymer_affinity.py  test_slurm.py
utils/: random.py
utils/loading/: loading.py
(+51 files in other folders)
