[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polyzymd"
version = "0.1.0"
description = "Molecular dynamics simulation toolkit for enzyme-polymer systems"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Joseph R. Laforet Jr.", email = "jola3134@colorado.edu" }
]
keywords = [
    "molecular-dynamics",
    "enzyme",
    "polymer",
    "openmm",
    "openff",
    "simulation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.10"
dependencies = [
    # Core simulation
    "openmm>=8.0",
    "openff-toolkit>=0.14.0",
    "openff-interchange>=0.3.0",
    "openff-units>=0.2.0",
    
    # Analysis
    "mdanalysis>=2.4.0",
    "biopandas>=0.4.0",
    "scikit-learn>=1.0.0",
    
    # Configuration and CLI
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "click>=8.0.0",
    
    # Utilities
    "numpy>=1.21.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=1.0.0",
]

[project.scripts]
polyzymd = "polyzymd.cli.main:main"
polyzymd-continue = "polyzymd.simulation.continuation:main"
polyzymd-submit = "polyzymd.workflow.daisy_chain:main"

[project.urls]
Homepage = "https://github.com/joelaforet/polyzymd"
Documentation = "https://polyzymd.readthedocs.io"
Repository = "https://github.com/joelaforet/polyzymd"
Issues = "https://github.com/joelaforet/polyzymd/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/polyzymd"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/configs",
    "/README.md",
    "/LICENSE",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
